add post list, post detail, styles

--- a/styles/common/_general.scss
+++ b/styles/common/_general.scss
@@ -17,39 +17,42 @@ html {
 
 body {
     @include font-reg;
-    @include font-size(18);
-    line-height: 1.5;
+    @include font(18, 27);
     color: $black;
     background-color: $white;
 }
 
-h1 {
-    @include font-bold;
-    @include font-size(36);
-    line-height: 1.2;
-    margin: 0 0 40px 0;
-}
-
-h2 {
-    @include font-med;
-    line-height: 1.2;
-}
-
 .wrapper {
+    @include container();
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    width: calc(100% - 100px);
-    max-width: 1000px;
-    min-height: 100vh;
-    margin: 0 auto 20px auto;
-    padding: 25px 0 0 0;
+    min-height: calc(100vh - 50px);
+}
 
-    @include tablet {
-        width: calc(100% - 50px);
-    }
+h1 {
+    @include font-bold;
+    @include font(36, 44);
+    margin: 0 0 20px 0;
+}
 
-    @include mobile {
-        width: calc(100% - 20px);
+h2 {
+    @include font-bold;
+    @include font(24, 28);
+    margin: 0 0 10px 0;
+}
+
+p {
+    margin: 0 0 10px 0;
+}
+
+a {
+    color: $black;
+    text-decoration: underline;
+    text-decoration-color: rgba($black, 0.25);
+    transition: text-decoration-color 0.3s ease;
+
+    &:hover {
+        text-decoration-color: $black;
     }
 }
