--- a/styles/common/_fonts.scss
+++ b/styles/common/_fonts.scss
@@ -1,16 +1,16 @@
-@import url("https://fonts.googleapis.com/css2?family=EB+Garamond&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Alegreya+Sans:wght@400;500;700&display=swap");
 
 @mixin font-reg {
-    font-family: "EB Garamond", serif;
+    font-family: "Alegreya Sans", sans-serif;
     font-weight: 400;
 }
 
 @mixin font-med {
-    font-family: "EB Garamond", serif;
-    font-weight: 600;
+    font-family: "Alegreya Sans", sans-serif;
+    font-weight: 500;
 }
 
 @mixin font-bold {
-    font-family: "EB Garamond", serif;
-    font-weight: 800;
+    font-family: "Alegreya Sans", sans-serif;
+    font-weight: 700;
 }
