--- a/styles/common/_mixins.scss
+++ b/styles/common/_mixins.scss
@@ -1,11 +1,23 @@
 /* mixins */
 
+@mixin font($font-size, $leading, $tracking: 0) {
+    font-size: ($font-size / $base-font-size) * 1rem;
+    line-height: ($leading / $font-size);
+    letter-spacing: $tracking * 0.1 + px;
+}
+
 @mixin font-size($font-size) {
     font-size: ($font-size / $base-font-size) * 1rem;
 }
 
 @mixin line-height($font-size, $leading) {
     line-height: ($leading / $font-size);
+}
+
+@mixin container($max-width: 600, $padding: 20) {
+    width: calc(100% - #{$padding * 2}px);
+    max-width: $max-width + px;
+    margin: 0 auto;
 }
 
 @mixin button-reset {
@@ -35,7 +47,25 @@
 }
 
 @mixin laptop {
-    @media screen and (max-width: 1100px) {
+    @media screen and (max-width: 1024px) {
+        @content;
+    }
+}
+
+@mixin desktop {
+    @media screen and (max-width: 1439px) {
+        @content;
+    }
+}
+
+@mixin widescreen {
+    @media screen and (min-width: 1441px) {
+        @content;
+    }
+}
+
+@mixin custom-break($break) {
+    @media screen and (max-width: $break + px) {
         @content;
     }
 }
