--- a/styles/components/_header.scss
+++ b/styles/components/_header.scss
@@ -3,10 +3,16 @@
     justify-content: flex-end;
     margin: 0 0 40px 0;
 
+    &__container {
+        @include container();
+    }
+
     p {
-        margin: 0;
+        margin: 50px 0 0 0;
 
         a {
+            @include font-bold;
+            @include font(32, 38);
             color: $black;
             text-decoration: underline;
             text-decoration-color: transparent;
