--- a/styles/main.scss
+++ b/styles/main.scss
@@ -7,3 +7,7 @@
 
 @import "components/header";
 @import "components/footer";
+@import "components/pagination";
+
+@import "pages/home";
+@import "pages/post";
