add minor style updates

--- a/styles/pages/_post.scss
+++ b/styles/pages/_post.scss
@@ -1,5 +1,13 @@
 .post {
     &__container {
         @include container();
+
+        .post-updated {
+            margin-top: -10px;
+        }
+
+        .post-body {
+            margin: 20px 0 0 0;
+        }
     }
 }
