--- a/styles/main.scss
+++ b/styles/main.scss
@@ -7,6 +7,7 @@
 
 @import "components/header";
 @import "components/footer";
+@import "components/loader";
 @import "components/pagination";
 
 @import "pages/home";
